--- a/loyalty-extension-service/tsconfig.json
+++ b/loyalty-extension-service/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  // "extends": "@tsconfig/recommended/tsconfig.json",
+  "extends": "@tsconfig/recommended/tsconfig.json",
   "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
     "resolveJsonModule": true,
